tests/snapshot/error/stack_trace/non_error/await_throw_module.js
async function foo() {
    await Promise.reject(42);
}
await foo();
